--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "keywords": "seed, polymer, web-components",
   "main": "th-table-bullets.html",
   "dependencies": {
-    "core-ajax": "polymer/core-ajax#~0.5.1"
+    "core-ajax": "polymer/core-ajax#~0.5.1",
     "th-animated": "https://github.com/thelmanews/th-animated.git"
   }
 }
